--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,7 +1,13 @@
 *{
-  margin: 0;
   box-sizing: border-box;
+}
+body{
+  margin: 0;
 }
 a{
   text-decoration: none;
+}
+li{
+  list-style: none;
+ 
 }
